--- a/css/style.css
+++ b/css/style.css
@@ -36,10 +36,10 @@ ul{
 	font-family: 'DM Sans', sans-serif;
 }
 
-li a:visited{
+.nav-item:visited{
 	color: rgb(171, 121, 219);
 }
-li a:hover{
+.nav-item:hover{
 	background-color: blue;
 	color: whitesmoke;
 }
@@ -56,7 +56,7 @@ li a:hover{
 .bandacompleta{
 	position: relative;
 	width: 100%;
-	margin-top: 35px;
+	margin-top: 55px;
 }
 
 .bandacompleta img{
@@ -327,4 +327,5 @@ h3{
 		height: 400px;
 	}
 }
+
 
