--- a/css/style.css
+++ b/css/style.css
@@ -225,9 +225,11 @@ p{
 	text-align: center;
 }
 .redes{
-	padding: 10px;
 	justify-content: space-between;
 	display: center;
+}
+.redes a{
+	padding: 10px;
 }
 
 h3{
