--- a/css/style.css
+++ b/css/style.css
@@ -1,333 +1,3 @@
-/*@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&family=Ubuntu:ital@0;1&display=swap');*/
-
-*{
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-}
-
-.body{
-	background-color: #f7602f;
-	position: relative;
-	min-height: 100vh;
-}
-
-.nav{
-	width: 100%;
-	align-items: flex-start;
-}
-.nav ul{
-	list-style: none;
-	text-align: center;
-}
-ul{
-	list-style-type: none;
-	margin: 0px;
-	padding: 0px;
-	overflow: hidden;
-}
-
-.nav-item {
-	display: flex;
-	color: white;
-	text-align: center;
-	padding-right: 10px;
-	text-decoration: double;
-	transition: .5s;
-	font-family: 'DM Sans', sans-serif;
-}
-
-.nav .nav-item a:visited {
-  color: rgb(171, 121, 219) ;
-}
-.nav .nav-item a:hover {
-	background-color: blue !important;
-	color: whitesmoke;
-	height: 50px;
-}
-
-.navbar-toggler{
-	color: #f7602f;
-	background-color: #f7602f;
-}
-
-.main{
-	background-color: #f7602f;
-}
-
-.bandacompleta{
-	position: relative;
-	width: 100%;
-	margin-top: 55px;
-}
-
-.bandacompleta img{
-	width: 100%;
-}
-
-.bandacompleta h1{
-	position: absolute;
-	top: 40%;
-	left: 35%;
-	padding: 30px;
-}
-
-h1{
-	text-align: absolute;
-	align-items: center;
-	font-family: 'DM Sans', sans-serif;
-	flex-flow: flex-start;
-	text-decoration: blink;
-	margin-bottom: top;
-	-webkit-text-stroke: 1px white;
-	color: transparent;
-	font-size: 50px;
-}
-
-.discopaticoindex iframe{
-	align-content: center;
-}
-
-h2{
-	text-align: center;
-	font-family: 'DM Sans', sans-serif;
-	flex-flow: flex-start;
-	text-decoration: blink;
-	-webkit-text-stroke: 1px white;
-	font-size: 40px;
-	padding: 20px;
-}
-
-.discografiacontainer{
-	display: grid;
-	grid-template-columns: repeat(3, 1fr);
-	grid-auto-rows: minmax(200px, auto);
-	gap: 20px;
-	padding: 20px;
-	margin-top: 60px;
-}
-.discografiacontainer img{
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	width: 100%;
-	height: 100%;
-	border-radius: 10px;
-	transition: transform 0.3s ease-in-out;
-	box-shadow: 7px 7px 5px 0px #e7997c;
-	border: 2px solid white;
-}
-.discografiaitems:hover {
-	filter: opacity(0.9);
-	transform: scale(1.04);
-}
-
-/*.deskarado{
-	padding: 20px;
-	border-radius: 200px;
-	margin: 50px;
-	width: 350px;
-	justify-content: first baseline;
-	align-items: center;
-}
-.bichos{
-	padding: 20px;
-	border-radius: 200px;
-	margin: 50px;
-	width: 350px;
-	justify-content: first baseline;
-	align-items: center;
-}
-.contraluz{
-	padding: 20px;
-	border-radius: 200px;
-	margin: 50px;
-	width: 350px;
-	justify-content: first baseline;
-	align-items: center;
-}
-.impulso{
-	padding: 20px;
-	border-radius: 200px;
-	margin: 50px;
-	width: 350px;
-	justify-content: first baseline;
-}
-.normalmente{
-	padding: 20px;
-	border-radius: 200px;
-	margin: 50px;
-	width: 350px;
-	justify-content: first baseline;
-}
-.pielyhueso{
-	padding: 20px;
-	border-radius: 200px;
-	margin: 50px;
-	width: 350px;
-	justify-content: first baseline;
-}
-.pasajesalvo{
-	padding: 20px;
-	border-radius: 200px;
-	margin: 50px;
-	width: 350px;
-	justify-content: first baseline;
-}
-.erase{
-	padding: 20px;
-	border-radius: 200px;
-	margin: 50px;
-	width: 350px;
-	justify-content: first baseline;
-}
-.unoparatodos{
-	padding: 20px;
-	border-radius: 200px;
-	margin: 50px;
-	width: 350px;
-	justify-content: first baseline;
-}
-.festejar{
-	padding: 20px;
-	border-radius: 200px;
-	margin: 50px;
-	width: 350px;
-	justify-content: first baseline;
-}
-.destilar{
-	padding: 20px;
-	border-radius: 200px;
-	margin: 50px;
-	width: 350px;
-	justify-content: first baseline;
-}
-.discopatico{
-	padding: 20px;
-	border-radius: 200px;
-	margin: 50px;
-	width: 350px;
-	justify-content: first baseline;
-}*/
-
-.footer{
-	width: 100%;
-	background-color: black;
-	color: whitesmoke;
-	text-align: center;
-	position: relative; 
-	bottom:0;
-	padding: 5px 0;
-}
-
-p{
-	font-family: 'Ubuntu', sans-serif;
-	text-align: center;
-}
-.redes{
-	justify-content: space-between;
-	display: center;
-}
-.redes a{
-	padding: 10px;
-}
-
-h3{
-	text-align: center;
-   font-family: 'DM Sans', sans-serif; 
-}
-
-.carousel-inner{
-	height: 700px;
-}
-.carousel-item{
-	height: 700px;
-}
-.carousel-item img{
-	height: 700px;
-	object-fit: cover;
-	transform: translate(0px, 50px);
-}
-
-.carousel-item iframe{
-	margin-top: 55px;
-}
-/*.galeria{
-	justify-content: center;
-	padding: 10px;
-	margin: 5px;
-}
-.galeria img{
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	width: 100%;
-	height: 100%;
-	border-radius: 10px;
-	transition: transform 0.3s ease-in-out;
-	box-shadow: 7px 7px 5px 0px #e7997c;
-	border: 2px solid white;
-}*/
-
-.divshows{
-	text-align: center;
-	margin-top: 60px;
-	padding: 5px;
-	background-image: url('../assets/velpuercaeuropa2.jpg');
-	background-repeat: fixed;
-}
-
-.divshows h2{
-	text-align: center;
-	font-family: 'DM Sans', sans-serif;
-	flex-flow: flex-start;
-	text-decoration: blink;
-	-webkit-text-stroke: 2px black;
-	font-size: 25px;
-	padding: 5px;
-}
-
-.divshows h2 a{
-	text-transform: black;
-}
-
-.mainbio{
-	height: 100vh;
-	display: table-footer-group;
-}
-.h2bio{
-	margin-top: 80px;
-	padding: 10px;
-	color: black;
-}
-.h3bio{
-	text-align: center;
-	text-shadow: 1px 1px 2px pink;
-	margin: 20px;
-   line-height: 1.5em;
-}
-.integrantes{
-	text-align: center;
-	text-shadow: 1px 1px 2px pink;
-	margin: 20px;
-   line-height: 1.5em;
-}
-
-@media (max-width: 700px){
-	.bandacompleta img{
-		margin-top: 30px;
-	}
-	.discografiacontainer{
-		display: grid;
-		grid-template-columns: repeat(2, 1fr);
-		grid-gap: 10px;
-		}
-}
-
-@media only screen and (max-width: 576px){
-	.carousel-inner, .carousel-item, .carousel-item img{
-		height: 400px;
-	}
-}
 
 
+/*# sourceMappingURL=style.css.map */
