--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,8 @@ ul {
 .nav .nav-item a:hover {
   background-color: blue !important;
   color: whitesmoke;
-  height: 50px;
+  height: 40px;
+  transition: 0.5s;
 }
 
 .navbar-toggler {
