--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -23,14 +23,14 @@ ul{
 	transition: .5s;
 	font-family: 'DM Sans', sans-serif;
 }
-
 .nav .nav-item a:visited {
   color: rgb(171, 121, 219) ;
 }
 .nav .nav-item a:hover {
 	background-color: blue !important;
 	color: whitesmoke;
-	height: 50px;
+	height: 40px;
+	transition: .5s;
 }
 
 .navbar-toggler{
