--- a/css/style.css
+++ b/css/style.css
@@ -73,13 +73,12 @@ ul {
 }
 
 .main {
-  background-color: #f7602f;
+  background: linear-gradient(#f7602f, #332b96, #f7602f);
 }
 
 .bandacompleta {
   position: relative;
-  width: 100%;
-  margin-top: 55px;
+  margin-top: 60px;
 }
 
 .bandacompleta img {
@@ -119,7 +118,8 @@ h2 {
   align-content: center;
 }
 
-.discografiacontainer {
+.discografiacontainergeneral {
+  background: linear-gradient(#f7602f, #332b96, #f7602f);
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-auto-rows: minmax(200px, auto);
@@ -143,6 +143,13 @@ h2 {
 .discografiaitems:hover {
   filter: opacity(0.9);
   transform: scale(1.04);
+}
+
+.parrafos p {
+  font-size: 25px;
+  font-family: "DM Sans", sans-serif;
+  text-align: center;
+  margin-top: 15px;
 }
 
 .carousel-inner {
@@ -193,6 +200,7 @@ p {
 .mainbio {
   height: 100vh;
   display: table-footer-group;
+  background: linear-gradient(#f7602f, #332b96, #f7602f);
 }
 
 .h2bio {
@@ -204,8 +212,12 @@ p {
 .h3bio {
   text-align: center;
   text-shadow: 1px 1px 2px pink;
-  margin: 20px;
+  margin: 50px;
   line-height: 1.5em;
+}
+
+.caja {
+  overflow: hidden;
 }
 
 .integrantes {
