--- a/scss/layout/_discografia.scss
+++ b/scss/layout/_discografia.scss
@@ -1,7 +1,6 @@
-.discopaticoindex iframe{
-	align-content: center;
-}
-.discografiacontainer{
+
+.discografiacontainergeneral{
+	background: linear-gradient(#f7602f, #332b96, #f7602f);
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
 	grid-auto-rows: minmax(200px, auto);
@@ -23,4 +22,10 @@
 .discografiaitems:hover {
 	filter: opacity(0.9);
 	transform: scale(1.04);
+}
+.parrafos p{
+	font-size: 25px;
+	font-family: 'DM Sans', sans-serif;
+	text-align: center;
+	margin-top: 15px;
 }
