--- a/css/style.css
+++ b/css/style.css
@@ -104,18 +104,23 @@ h1 {
   font-size: 50px;
 }
 
+.escuchaindex {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 h2 {
   text-align: center;
   font-family: "DM Sans", sans-serif;
-  flex-flow: flex-start;
   text-decoration: blink;
   -webkit-text-stroke: 1px white;
   font-size: 40px;
   padding: 20px;
 }
 
-.discopaticoindex iframe {
-  align-content: center;
+.animate__bounceInDown {
+  --animate-duration: 2s;
 }
 
 .discografiacontainergeneral {
@@ -185,16 +190,26 @@ p {
 
 .divshows h2 {
   text-align: center;
-  font-family: "DM Sans", sans-serif;
+  font-family: "Ubuntu", sans-serif;
   flex-flow: flex-start;
-  text-decoration: blink;
-  -webkit-text-stroke: 2px black;
+  color: #fbfb09;
+  -webkit-text-stroke: 1px #000000;
   font-size: 25px;
   padding: 5px;
 }
 
-.divshows h2 a {
-  text-transform: black;
+.divshows a {
+  text-decoration: none;
+  background: #8e25da;
+  color: #fbfb09;
+  text-shadow: 1px 1px #fff;
+}
+
+.divshows a:hover {
+  background-color: blue !important;
+  color: whitesmoke;
+  height: 40px;
+  transition: 0.5s;
 }
 
 .mainbio {
@@ -234,17 +249,43 @@ h3 {
 
 @media (max-width: 700px) {
   .bandacompleta img {
-    margin-top: 30px;
+    margin-top: -5px;
   }
-  .discografiacontainer {
+  .discografiacontainergeneral {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 10px;
   }
+  h1 {
+    font-size: 30px;
+  }
+  h2 {
+    font-size: 25px;
+  }
 }
 @media only screen and (max-width: 576px) {
-  .carousel-inner, .carousel-item, .carousel-item img {
+  .carousel-inner,
+  .carousel-item,
+  .carousel-item img {
+    width: 100%;
     height: 400px;
+  }
+}
+@media (max-width: 430px) {
+  h1 {
+    font-size: 20px;
+  }
+  h2 {
+    font-size: 15px;
+  }
+}
+@media (max-width: 360px) {
+  .discografiacontainergeneral {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+  h1 {
+    font-size: 15px;
   }
 }
 
