--- a/scss/layout/_index.scss
+++ b/scss/layout/_index.scss
@@ -31,15 +31,22 @@ h1{
 	color: transparent;
 	font-size: 50px;
 }
+.escuchaindex{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
 h2{
 	text-align: center;
 	font-family: 'DM Sans', sans-serif;
-	flex-flow: flex-start;
 	text-decoration: blink;
 	-webkit-text-stroke: 1px white;
 	font-size: 40px;
 	padding: 20px;
 }
-.discopaticoindex iframe{
-	align-content: center;
+.animate__bounceInDown {
+	--animate-duration: 2s;
 }
+
+
