--- a/scss/layout/_shows.scss
+++ b/scss/layout/_shows.scss
@@ -8,14 +8,24 @@
 
 .divshows h2{
 	text-align: center;
-	font-family: 'DM Sans', sans-serif;
+	font-family: 'Ubuntu', sans-serif;
 	flex-flow: flex-start;
-	text-decoration: blink;
-	-webkit-text-stroke: 2px black;
+	color: #fbfb09;
+	-webkit-text-stroke: 1px #000000;
 	font-size: 25px;
 	padding: 5px;
 }
 
-.divshows h2 a{
-	text-transform: black;
+.divshows a{
+	text-decoration: none;
+	background: #8e25da;
+    color: #fbfb09;
+    text-shadow: 1px 1px #fff;
+}
+
+.divshows a:hover{
+	background-color: blue !important;
+	color: whitesmoke;
+	height: 40px;
+	transition: .5s;
 }
