--- a/css/style.css
+++ b/css/style.css
@@ -152,7 +152,7 @@ h2 {
 
 .parrafos p {
   font-size: 25px;
-  font-family: "DM Sans", sans-serif;
+  font-family: "Ubuntu", sans-serif;
   text-align: center;
   margin-top: 15px;
 }
@@ -219,6 +219,7 @@ p {
 }
 
 .h2bio {
+  font-family: "DM Sans", sans-serif;
   margin-top: 80px;
   padding: 10px;
   color: black;
@@ -244,7 +245,7 @@ p {
 
 h3 {
   text-align: center;
-  font-family: "DM Sans", sans-serif;
+  font-family: "Ubuntu", sans-serif;
 }
 
 @media (max-width: 700px) {
