--- a/scss/layout/_discografia.scss
+++ b/scss/layout/_discografia.scss
@@ -1,6 +1,6 @@
 
 .discografiacontainergeneral{
-	background: linear-gradient(#f7602f, #332b96, #f7602f);
+	background: $main-color;
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
 	grid-auto-rows: minmax(200px, auto);
@@ -25,7 +25,7 @@
 }
 .parrafos p{
 	font-size: 25px;
-	font-family: 'DM Sans', sans-serif;
+	font-family: $fontparrafos;
 	text-align: center;
 	margin-top: 15px;
 }
