--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+.height, .carousel-item img, .carousel-item, .carousel-inner {
+  height: 700px;
+}
+
 .nav {
   width: 100%;
   align-items: flex-start;
@@ -91,8 +95,7 @@ ul {
   left: 35%;
   padding: 30px;
 }
-
-h1 {
+.bandacompleta h1 {
   text-align: absolute;
   align-items: center;
   font-family: "DM Sans", sans-serif;
@@ -157,25 +160,15 @@ h2 {
   margin-top: 15px;
 }
 
-.carousel-inner {
-  height: 700px;
-}
-
-.carousel-item {
-  height: 700px;
-}
-
 .carousel-item img {
-  height: 700px;
   object-fit: cover;
   transform: translate(0px, 50px);
 }
-
-.carousel-item iframe {
+.carousel-item img iframe {
   margin-top: 55px;
 }
 
-p {
+.carousel-item p {
   font-family: "Ubuntu", sans-serif;
   text-align: center;
 }
@@ -187,7 +180,6 @@ p {
   background-image: url("../assets/velpuercaeuropa2.jpg");
   background-repeat: fixed;
 }
-
 .divshows h2 {
   text-align: center;
   font-family: "Ubuntu", sans-serif;
@@ -204,7 +196,6 @@ p {
   color: #fbfb09;
   text-shadow: 1px 1px #fff;
 }
-
 .divshows a:hover {
   background-color: blue !important;
   color: whitesmoke;
