--- a/scss/base/_utilities.scss
+++ b/scss/base/_utilities.scss
@@ -1,1 +1,11 @@
 //MIXIN
+@mixin display($flex, $align, $justify){
+    display: $flex;
+    align-items: $align;
+    justify-content: $justify;
+}
+
+//EXTEND
+.height {
+    height: 700px;
+  }
