--- a/scss/layout/_galeria.scss
+++ b/scss/layout/_galeria.scss
@@ -1,19 +1,19 @@
-.carousel-inner{
-	height: 700px;
+.carousel-inner {
+  @extend .height;
 }
-.carousel-item{
-	height: 700px;
-}
-.carousel-item img{
-	height: 700px;
-	object-fit: cover;
-	transform: translate(0px, 50px);
+.carousel-item {
+  @extend .height;
+  & img {
+    @extend .height;
+    object-fit: cover;
+    transform: translate(0px, 50px);
+    & iframe {
+      margin-top: 55px;
+    }
+  }
 }
 
-.carousel-item iframe{
-	margin-top: 55px;
-}
-p{
-	font-family: $fontparrafos;
-	text-align: center;
+.carousel-item p {
+  font-family: $fontparrafos;
+  text-align: center;
 }
