--- a/css/style.css
+++ b/css/style.css
@@ -248,14 +248,20 @@ h3 {
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 10px;
   }
-  h1 {
+  .bandacompleta h1 {
     font-size: 30px;
   }
-  h2 {
+  .escuchaindex h2 {
+    font-size: 25px;
+  }
+  .divshows h2 {
     font-size: 25px;
   }
 }
 @media only screen and (max-width: 576px) {
+  .maincarrusel {
+    min-height: 100vh;
+  }
   .carousel-inner,
   .carousel-item,
   .carousel-item img {
@@ -264,10 +270,10 @@ h3 {
   }
 }
 @media (max-width: 430px) {
-  h1 {
+  .bandacompleta h1 {
     font-size: 20px;
   }
-  h2 {
+  .escuchaindex h2 {
     font-size: 15px;
   }
 }
@@ -276,7 +282,7 @@ h3 {
     display: grid;
     grid-template-columns: 1fr;
   }
-  h1 {
+  .bandacompleta h1 {
     font-size: 15px;
   }
 }
