--- a/scss/layout/_mediaqueries.scss
+++ b/scss/layout/_mediaqueries.scss
@@ -7,16 +7,22 @@
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 10px;
   }
-  h1 {
+  .bandacompleta h1 {
     font-size: 30px;
   }
 
-  h2 {
+  .escuchaindex h2 {
+    font-size: 25px;
+  }
+  .divshows h2{
     font-size: 25px;
   }
 }
 
 @media only screen and (max-width: 576px) {
+  .maincarrusel{
+    min-height: 100vh;
+  }
   .carousel-inner,
   .carousel-item,
   .carousel-item img {
@@ -25,11 +31,12 @@
   }
 }
 
+
 @media (max-width: 430px) {
-  h1 {
+  .bandacompleta h1 {
     font-size: 20px;
   }
-  h2 {
+  .escuchaindex h2 {
     font-size: 15px;
   }
 }
@@ -39,7 +46,7 @@
     display: grid;
     grid-template-columns: 1fr;
   }
-  h1 {
+  .bandacompleta h1 {
     font-size: 15px;
   }
-}
+} 
