--- a/scss/layout/_index.scss
+++ b/scss/layout/_index.scss
@@ -2,9 +2,13 @@
   background-color: #f7602f;
   position: relative;
   min-height: 100vh;
+  
 }
 .main {
   background: $main-color;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .bandacompleta {
@@ -13,6 +17,8 @@
 }
 .bandacompleta img {
   width: 100%;
+  min-height: 100vh;
+  object-fit: cover;
 }
 .bandacompleta h1 {
   position: absolute;
@@ -26,9 +32,9 @@
     flex-flow: flex-start;
     text-decoration: blink;
     margin-bottom: top;
-    -webkit-text-stroke: 1px white;
+    -webkit-text-stroke: 2px white;
     color: transparent;
-    font-size: 50px;
+    font-size: 100px;
   }
 }
 .escuchaindex {
@@ -45,4 +51,13 @@ h2 {
 }
 .animate__bounceInDown {
   --animate-duration: 2s;
+}
+
+.discopaticoindex iframe{
+  padding: 1rem;
+  width: 1400px;
+  max-width: 100%;
+  height: 400px;
+  background: linear-gradient(to left, red, purple);
+  padding: 3px;
 }
