--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 
-.height, .carousel-item img, .carousel-item, .carousel-inner {
+.height, .carousel-item iframe, .carousel-item img, .carousel-item, .carousel-inner {
   height: 700px;
 }
 
@@ -45,6 +45,7 @@ ul {
   color: whitesmoke;
   height: 40px;
   transition: 0.5s;
+  padding: 2px;
 }
 
 .navbar-toggler {
@@ -85,6 +86,9 @@ ul {
 
 .main {
   background: linear-gradient(#f7602f, #332b96, #f7602f);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .bandacompleta {
@@ -94,6 +98,8 @@ ul {
 
 .bandacompleta img {
   width: 100%;
+  min-height: 100vh;
+  object-fit: cover;
 }
 
 .bandacompleta h1 {
@@ -109,9 +115,9 @@ ul {
   flex-flow: flex-start;
   text-decoration: blink;
   margin-bottom: top;
-  -webkit-text-stroke: 1px white;
+  -webkit-text-stroke: 2px white;
   color: transparent;
-  font-size: 50px;
+  font-size: 100px;
 }
 
 .escuchaindex {
@@ -131,6 +137,15 @@ h2 {
 
 .animate__bounceInDown {
   --animate-duration: 2s;
+}
+
+.discopaticoindex iframe {
+  padding: 1rem;
+  width: 1400px;
+  max-width: 100%;
+  height: 400px;
+  background: linear-gradient(to left, red, purple);
+  padding: 3px;
 }
 
 .discografiacontainergeneral {
@@ -167,12 +182,16 @@ h2 {
   margin-top: 15px;
 }
 
+.carousel-inner {
+  height: 100vh;
+}
+
 .carousel-item img {
   object-fit: cover;
   transform: translate(0px, 50px);
 }
-.carousel-item img iframe {
-  margin-top: 55px;
+.carousel-item iframe {
+  margin-top: 60px;
 }
 
 .carousel-item p {
@@ -204,10 +223,11 @@ h2 {
   text-shadow: 1px 1px #fff;
 }
 .divshows a:hover {
-  background-color: blue !important;
+  background-color: rgb(75, 75, 213) !important;
   color: whitesmoke;
   height: 40px;
   transition: 0.5s;
+  font-size: 20px;
 }
 
 .mainbio {
@@ -222,6 +242,17 @@ h2 {
   padding: 10px;
   color: black;
 }
+.h2bio:hover {
+  transition: 0.5s;
+  font-size: 50px;
+}
+
+.h3bioprincipal {
+  text-align: center;
+  margin: 30px;
+  line-height: 1.5em;
+  min-height: 50vh;
+}
 
 .h3bio {
   text-align: center;
@@ -231,6 +262,10 @@ h2 {
 
 .caja {
   overflow: hidden;
+}
+
+.h2integrantes {
+  object-fit: cover;
 }
 
 .integrantes {
@@ -245,6 +280,11 @@ h3 {
   font-family: "Ubuntu", sans-serif;
 }
 
+@media (max-width: 768px) {
+  .nav .nav-item a:hover {
+    width: 90px;
+  }
+}
 @media (max-width: 700px) {
   .bandacompleta img {
     margin-top: -5px;
@@ -256,12 +296,17 @@ h3 {
   }
   .bandacompleta h1 {
     font-size: 30px;
+    -webkit-text-stroke: 0.5px white;
+    transition: 0.5s;
   }
   .escuchaindex h2 {
     font-size: 25px;
+    -webkit-text-stroke: 0.5px white;
+    transition: 0.5s;
   }
   .divshows h2 {
     font-size: 25px;
+    transition: 0.5s;
   }
 }
 @media only screen and (max-width: 576px) {
@@ -278,9 +323,13 @@ h3 {
 @media (max-width: 430px) {
   .bandacompleta h1 {
     font-size: 20px;
+    -webkit-text-stroke: 0.5px white;
+    transition: 0.5s;
   }
   .escuchaindex h2 {
     font-size: 15px;
+    -webkit-text-stroke: 0.5px white;
+    transition: 0.5s;
   }
 }
 @media (max-width: 360px) {
