--- a/scss/layout/_mediaqueries.scss
+++ b/scss/layout/_mediaqueries.scss
@@ -1,3 +1,9 @@
+@media (max-width: 768px){
+  .nav .nav-item a:hover {
+    width: 90px;
+  }
+}
+
 @media (max-width: 700px) {
   .bandacompleta img {
     margin-top: -5px;
@@ -9,13 +15,18 @@
   }
   .bandacompleta h1 {
     font-size: 30px;
+    -webkit-text-stroke: .5px white;
+    transition: .5s;
   }
 
   .escuchaindex h2 {
     font-size: 25px;
+    -webkit-text-stroke: .5px white;
+    transition: .5s;
   }
   .divshows h2{
     font-size: 25px;
+    transition: .5s;
   }
 }
 
@@ -35,9 +46,13 @@
 @media (max-width: 430px) {
   .bandacompleta h1 {
     font-size: 20px;
+    -webkit-text-stroke: .5px white;
+    transition: .5s;
   }
   .escuchaindex h2 {
     font-size: 15px;
+    -webkit-text-stroke: .5px white;
+    transition: .5s;
   }
 }
 
