--- a/css/style.css
+++ b/css/style.css
@@ -83,8 +83,7 @@ ul {
   position: relative;
   min-height: 100vh;
 }
-
-.main {
+.body .main {
   background: linear-gradient(#f7602f, #332b96, #f7602f);
   display: flex;
   flex-direction: column;
@@ -95,13 +94,11 @@ ul {
   position: relative;
   margin-top: 60px;
 }
-
 .bandacompleta img {
   width: 100%;
   min-height: 100vh;
   object-fit: cover;
 }
-
 .bandacompleta h1 {
   position: absolute;
   top: 40%;
@@ -117,7 +114,7 @@ ul {
   margin-bottom: top;
   -webkit-text-stroke: 2px white;
   color: transparent;
-  font-size: 100px;
+  font-size: 80px;
 }
 
 .escuchaindex {
@@ -139,13 +136,39 @@ h2 {
   --animate-duration: 2s;
 }
 
+.discopaticoindex {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .discopaticoindex iframe {
   padding: 1rem;
-  width: 1400px;
-  max-width: 100%;
+  width: 1000px;
   height: 400px;
   background: linear-gradient(to left, red, purple);
   padding: 3px;
+  margin: 10px;
+}
+
+.videosmuestra {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  object-fit: cover;
+}
+.videosmuestra video {
+  width: 450px;
+  margin: 5px;
+  padding: 5px;
+  box-shadow: 0px 0px 5px 1px black;
+}
+.videosmuestra p {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  font-size: 20px;
+  font-family: "Ubuntu", sans-serif;
 }
 
 .discografiacontainergeneral {
@@ -242,10 +265,6 @@ h2 {
   padding: 10px;
   color: black;
 }
-.h2bio:hover {
-  transition: 0.5s;
-  font-size: 50px;
-}
 
 .h3bioprincipal {
   text-align: center;
@@ -280,6 +299,27 @@ h3 {
   font-family: "Ubuntu", sans-serif;
 }
 
+@media (max-width: 1286px) {
+  .videosmuestra {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .discopaticoindex iframe {
+    width: 800px;
+  }
+  .h3bioprincipal {
+    min-height: none;
+  }
+}
+@media (max-width: 956px) {
+  .bandacompleta h1 {
+    font-size: 60px;
+  }
+  .discopaticoindex iframe {
+    width: 100%;
+  }
+}
 @media (max-width: 768px) {
   .nav .nav-item a:hover {
     width: 90px;
@@ -295,7 +335,7 @@ h3 {
     grid-gap: 10px;
   }
   .bandacompleta h1 {
-    font-size: 30px;
+    font-size: 50px;
     -webkit-text-stroke: 0.5px white;
     transition: 0.5s;
   }
@@ -310,8 +350,13 @@ h3 {
   }
 }
 @media only screen and (max-width: 576px) {
+  .videoindex video {
+    width: 300px;
+  }
   .maincarrusel {
-    min-height: 100vh;
+    min-height: 76vh;
+    margin-top: 20%;
+    margin-bottom: 20%;
   }
   .carousel-inner,
   .carousel-item,
@@ -319,17 +364,34 @@ h3 {
     width: 100%;
     height: 400px;
   }
+  .carousel-inner iframe,
+  .carousel-item iframe,
+  .carousel-item img iframe {
+    width: 100%;
+    height: 400px;
+  }
 }
 @media (max-width: 430px) {
   .bandacompleta h1 {
-    font-size: 20px;
+    font-size: 50px;
     -webkit-text-stroke: 0.5px white;
     transition: 0.5s;
   }
   .escuchaindex h2 {
-    font-size: 15px;
+    font-size: 20px;
     -webkit-text-stroke: 0.5px white;
     transition: 0.5s;
+  }
+  .discopaticoindex iframe {
+    width: 250px;
+  }
+  .videosmuestra .videoindex {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .videoindex video {
+    width: 200px;
   }
 }
 @media (max-width: 360px) {
@@ -338,7 +400,10 @@ h3 {
     grid-template-columns: 1fr;
   }
   .bandacompleta h1 {
-    font-size: 15px;
+    font-size: 25px;
+  }
+  .bandacompleta img {
+    width: 100%;
   }
 }
 
