--- a/scss/layout/_index.scss
+++ b/scss/layout/_index.scss
@@ -2,39 +2,40 @@
   background-color: #f7602f;
   position: relative;
   min-height: 100vh;
-  
-}
-.main {
-  background: $main-color;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+
+  & .main {
+    background: $main-color;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 .bandacompleta {
   position: relative;
   margin-top: 60px;
-}
-.bandacompleta img {
-  width: 100%;
-  min-height: 100vh;
-  object-fit: cover;
-}
-.bandacompleta h1 {
-  position: absolute;
-  top: 40%;
-  left: 35%;
-  padding: 30px;
-  & {
-    text-align: absolute;
-    align-items: center;
-    font-family: $fonttitulo;
-    flex-flow: flex-start;
-    text-decoration: blink;
-    margin-bottom: top;
-    -webkit-text-stroke: 2px white;
-    color: transparent;
-    font-size: 100px;
+
+  & img {
+    width: 100%;
+    min-height: 100vh;
+    object-fit: cover;
+  }
+  & h1 {
+    position: absolute;
+    top: 40%;
+    left: 35%;
+    padding: 30px;
+    & {
+      text-align: absolute;
+      align-items: center;
+      font-family: $fonttitulo;
+      flex-flow: flex-start;
+      text-decoration: blink;
+      margin-bottom: top;
+      -webkit-text-stroke: 2px white;
+      color: transparent;
+      font-size: 80px;
+    }
   }
 }
 .escuchaindex {
@@ -53,11 +54,34 @@ h2 {
   --animate-duration: 2s;
 }
 
-.discopaticoindex iframe{
+.discopaticoindex {
+  @include display(flex, center, center);
+}
+.discopaticoindex iframe {
   padding: 1rem;
-  width: 1400px;
-  max-width: 100%;
+  width: 1000px;
   height: 400px;
   background: linear-gradient(to left, red, purple);
   padding: 3px;
+  margin: 10px;
+}
+
+.videosmuestra {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  object-fit: cover;
+  & video {
+    width: 450px;
+    margin: 5px;
+    padding: 5px;
+    box-shadow: 0px 0px 5px 1px black;
+  }
+  & p {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    font-size: 20px;
+    font-family: $fontparrafos;
+  }
 }
