--- a/scss/layout/_mediaqueries.scss
+++ b/scss/layout/_mediaqueries.scss
@@ -1,9 +1,31 @@
-@media (max-width: 768px){
+@media (max-width: 1286px) {
+  .videosmuestra {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .discopaticoindex iframe {
+    width: 800px;
+  }
+  .h3bioprincipal {
+    min-height: none;
+  }
+}
+
+@media (max-width: 956px) {
+  .bandacompleta h1 {
+    font-size: 60px;
+  }
+  .discopaticoindex iframe {
+    width: 100%;
+  }
+}
+
+@media (max-width: 768px) {
   .nav .nav-item a:hover {
     width: 90px;
   }
 }
-
 @media (max-width: 700px) {
   .bandacompleta img {
     margin-top: -5px;
@@ -14,45 +36,64 @@
     grid-gap: 10px;
   }
   .bandacompleta h1 {
-    font-size: 30px;
-    -webkit-text-stroke: .5px white;
-    transition: .5s;
+    font-size: 50px;
+    -webkit-text-stroke: 0.5px white;
+    transition: 0.5s;
   }
-
   .escuchaindex h2 {
     font-size: 25px;
-    -webkit-text-stroke: .5px white;
-    transition: .5s;
+    -webkit-text-stroke: 0.5px white;
+    transition: 0.5s;
   }
-  .divshows h2{
+  .divshows h2 {
     font-size: 25px;
-    transition: .5s;
+    transition: 0.5s;
   }
 }
 
 @media only screen and (max-width: 576px) {
-  .maincarrusel{
-    min-height: 100vh;
+  .videoindex video {
+    width: 300px;
+  }
+  .maincarrusel {
+    min-height: 76vh;
+    margin-top: 20%;
+    margin-bottom: 20%;
   }
   .carousel-inner,
   .carousel-item,
   .carousel-item img {
     width: 100%;
     height: 400px;
+
+    & iframe {
+      width: 100%;
+      height: 400px;
+    }
   }
 }
 
-
 @media (max-width: 430px) {
   .bandacompleta h1 {
-    font-size: 20px;
-    -webkit-text-stroke: .5px white;
-    transition: .5s;
+    font-size: 50px;
+    -webkit-text-stroke: 0.5px white;
+    transition: 0.5s;
   }
   .escuchaindex h2 {
-    font-size: 15px;
-    -webkit-text-stroke: .5px white;
-    transition: .5s;
+    font-size: 20px;
+    -webkit-text-stroke: 0.5px white;
+    transition: 0.5s;
+  }
+  .discopaticoindex iframe {
+    width: 250px;
+  }
+  .videosmuestra .videoindex {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .videoindex video {
+    width: 200px;
   }
 }
 
@@ -62,6 +103,9 @@
     grid-template-columns: 1fr;
   }
   .bandacompleta h1 {
-    font-size: 15px;
+    font-size: 25px;
   }
-} 
+  .bandacompleta img {
+    width: 100%;
+  }
+}
