--- a/scss/layout/_index.scss
+++ b/scss/layout/_index.scss
@@ -71,7 +71,7 @@ h2 {
   flex-direction: row;
   justify-content: center;
   object-fit: cover;
-  & video {
+  & iframe {
     width: 450px;
     margin: 5px;
     padding: 5px;
