--- a/scss/layout/_galeria.scss
+++ b/scss/layout/_galeria.scss
@@ -1,3 +1,6 @@
+.body{
+  background: linear-gradient(70deg, #dc4f67, #86224d, #6c58b6);
+}
 .carousel-inner {
   @extend .height;
   height: 100vh;
